--- a/90-Code/02.3.Rmd
+++ b/90-Code/02.3.Rmd
@@ -1,7 +1,7 @@
 ---
-title: '02.3'
-author: "QY"
-date: "2024-10-01"
+title: '02.3 Practice'
+author: "R13B42015"
+date: "2024-10-05"
 output: html_document
 ---
 
@@ -9,22 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## 
 
 ```{r cars}
 summary(cars)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
