--- a/90-Code/06.3-LV_HW.Rmd
+++ b/90-Code/06.3-LV_HW.Rmd
@@ -15,7 +15,6 @@ library(gganimate)
 library(reshape2)
 ```
 
-# Directory creation for GIF output
 ```{r ,include=FALSE}
 # dir create
 gif_dir<- "C://ocean5098//06-gif_practice"
@@ -35,8 +34,8 @@ grow <- function(start_1, start_2) {
   growth.rate <- 1.2  # Growth rate
   K1 <- 100  # Carrying capacity for species 1
   K2 <- 120  # Carrying capacity for species 2
-  a12 <- 0.8  # Competition coefficient for species 1
-  a21 <- 0.8  # Competition coefficient for species 2
+  a12 <- 0.8  # Competition coefficient for sqecies 1
+  a21 <- 0.8  # Competition coefficient for sqecies 2
   
   N1[1] <- start_1  # Initialize population of species 1
   N2[1] <- start_2  # Initialize population of species 2
@@ -46,6 +45,7 @@ grow <- function(start_1, start_2) {
     N2[i] <- N2[i-1] + (growth.rate * N2[i-1] * (K2 - N2[i-1] - (a21 * N1[i-1])) / K2)
   }
   
+  # return
   return(data.frame(Generation = 1:num_gen, N1 = N1, N2 = N2))
 }
 ```
@@ -53,14 +53,14 @@ grow <- function(start_1, start_2) {
 # Results
 ```{r}
 # Collect data for different scenarios
-data_alone1 <- grow(10, 0)  # Species 1 alone
-data_alone2 <- grow(0, 10)  # Species 2 alone
-data_competing <- grow(10, 10)  # Both species competing
+data_alone1 <- grow(10, 0)
+data_alone2 <- grow(0, 10)
+data_competing <- grow(10, 10)
 
 # Combine data into one data frame
-data_alone1$Scenario <- "Species 1 Alone"
-data_alone2$Scenario <- "Species 2 Alone"
-data_competing$Scenario <- "Both Species Competing"
+data_alone1$Scenario <- "S1" # Species 1 Alone
+data_alone2$Scenario <- "S2" # Species 2 Alone
+data_competing$Scenario <- "Both" # Both Species Competing
 
 # Combine all scenarios into one data frame
 combined_data <- rbind(data_alone1, data_alone2, data_competing)
@@ -69,23 +69,29 @@ combined_data <- rbind(data_alone1, data_alone2, data_competing)
 data_long <- melt(combined_data, id.vars = c("Generation", "Scenario"), 
                   variable.name = "Species", 
                   value.name = "Population")
+data_long
 ```
 
 # Make Animation
 ```{r}
 # Create the animation
 p <- ggplot(data_long, aes(x = Generation, y = Population, color = Species)) +
-  geom_line(size = 1.2) +
+  geom_point(size = 1.2) +
   labs(title = 'Population Dynamics: {frame_time}', 
        x = 'Generations', 
        y = 'Population Size') +
   transition_time(Generation) +
+  shadow_wake(wake_length =0.8, alpha = FALSE) +
   ease_aes('linear') +
   facet_wrap(~ Scenario) +  # Create separate plots for each scenario
   theme_minimal() + 
   scale_color_manual(values = c("blue", "red"), labels = c("Species 1", "Species 2"))
 
 # Save the animation as a GIF
-anim <- animate(p, nframes = 30, fps = 10, width = 800, height = 600)
-anim_save(file.path(gif_dir,"population_dynamics_animation.gif"), animation = anim)
+gif_path<- paste0(gif_dir,"//" ,"my animation.gif")
+anim_save(gif_path, p)
+```
+
+```{r, echo=FALSE, fig.align='center', fig.cap="Iris species data collection", out.width = '100%'}
+ knitr::include_graphics(gif_path)
 ```
